Fix minor icon clipping. Disable text highlighting on header.

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -14,6 +14,7 @@
   overflow-x: hidden;
   width: 100%;
   text-align: left;
+  user-select: none;
 }
 
 .module-contact-name__profile-number {
@@ -1980,9 +1981,9 @@
 .module-conversation-list-item__message__status-icon {
   flex-shrink: 0;
 
-  margin-top: 2px;
+  margin-top: 1px;
   width: 12px;
-  height: 12px;
+  height: 13px;
   display: inline-block;
   margin-left: 6px;
 }
@@ -2199,7 +2200,7 @@
   div {
     padding: 12px;
     background-color: $color-dark-90;
-
+    user-select: none;
     cursor: pointer;
 
     &:hover {
